--- a/projects/angular-textarena/package.json
+++ b/projects/angular-textarena/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@itsumma/ng-textarena",
-  "version": "0.0.14",
+  "version": "0.0.15",
   "peerDependencies": {
     "@angular/common": "^10.2.4",
     "@angular/core": "^10.2.4"
   },
   "dependencies": {
     "tslib": "^2.0.0",
-    "@itsumma/textarena": "^1.x"
+    "@itsumma/textarena": "^1.2"
   },
   "description": "This library was generated with [Angular CLI](https://github.com/angular/angular-cli) version 10.2.4.",
   "main": "karma.conf.js",
